@@ -1,3 +1,7 @@
+2008-02-18  David Wetzel <dave@turbocat.de>
+        * GSWAdaptors/Apache2/mod_gsw.c
+        pass more to the application
+
 2008-02-13  David Ayers  <ayers@fsfe.org>
 
 	* GSWeb.framework/GSWUtils.m (boolValueFor,boolValueWithDefaultFor): Rely
